--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "qs": "^6.10.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
