--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "axios": "^0.26.1",
     "bootstrap-icons-vue": "^1.8.1",
-    "bootstrap-vue-3": "^0.1.9",
+    "bootstrap-vue-3": "^0.1.11",
     "core-js": "^3.8.3",
     "pinia": "^2.0.13",
     "qs": "^6.10.3",
+    "sockjs": "^0.3.24",
+    "sockjs-client": "^1.6.0",
+    "util": "^0.12.4",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.14",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
+    "@types/sockjs-client": "^1.5.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
