--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@stomp/stompjs": "^5.2.0",
     "axios": "^0.26.1",
     "bootstrap-icons-vue": "^1.8.1",
     "bootstrap-vue-3": "^0.1.11",
