--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@stomp/stompjs": "^6.0.0",
     "@types/stompjs": "^2.3.5",
+    "@types/text-encoding": "^0.0.36",
     "axios": "^0.26.1",
     "bootstrap-icons-vue": "^1.8.1",
     "bootstrap-vue-3": "^0.1.11",
