--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/text-encoding": "^0.0.36",
     "axios": "^0.26.1",
     "bootstrap-icons-vue": "^1.8.1",
+    "bootstrap-vue": "^2.22.0",
     "bootstrap-vue-3": "^0.1.11",
     "core-js": "^3.8.3",
     "pinia": "^2.0.13",
