--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/text-encoding": "^0.0.36",
     "axios": "^0.26.1",
     "bootstrap-icons-vue": "^1.8.1",
-    "bootstrap-vue": "^2.22.0",
     "bootstrap-vue-3": "^0.1.11",
     "core-js": "^3.8.3",
     "pinia": "^2.0.13",
@@ -23,11 +22,14 @@
     "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.0",
     "util": "^0.12.4",
+    "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-final-modal": "^3.4.4",
     "vue-router": "^4.0.14",
     "vue-toastification": "^2.0.0-rc.5",
-    "webstomp-client": "^1.2.6"
+    "webstomp-client": "^1.2.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/sockjs-client": "^1.5.1",
