--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-class-component": "^8.0.0-0",
     "vue-final-modal": "^3.4.4",
     "vue-router": "^4.0.14",
+    "vue-simple-password-meter": "^1.1.0",
     "vue-toastification": "^2.0.0-rc.5",
     "webstomp-client": "^1.2.6",
     "yup": "^0.32.11"
