--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-final-modal": "^3.4.4",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.14",
     "vue-simple-password-meter": "^1.1.0",
     "vue-toastification": "^2.0.0-rc.5",
