--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stomp/stompjs": "^6.0.0",
     "@types/stompjs": "^2.3.5",
     "@types/text-encoding": "^0.0.36",
+    "@vueform/multiselect": "^2.4.2",
     "axios": "^0.26.1",
     "bootstrap-icons-vue": "^1.8.1",
     "bootstrap-vue-3": "^0.1.11",
