add search for users and posts, delete unused methods and imports

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-icons-vue": "^1.8.1",
     "bootstrap-vue-3": "^0.1.11",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "pinia": "^2.0.13",
     "qs": "^6.10.3",
     "sockjs": "^0.3.24",
