--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-router": "^4.0.14",
     "vue-simple-password-meter": "^1.1.0",
     "vue-toastification": "^2.0.0-rc.5",
+    "vuemoji-picker": "^0.1.4",
     "webstomp-client": "^1.2.6",
     "yup": "^0.32.11"
   },
