update terser package

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "qs": "^6.10.3",
     "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.0",
+    "terser": "^5.14.2",
     "util": "^0.12.4",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
