--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "bootstrap-icons-vue": "^1.8.1",
     "bootstrap-vue-3": "^0.1.11",
     "core-js": "^3.8.3",
+    "kafkajs": "^2.1.0",
     "moment": "^2.29.4",
     "pinia": "^2.0.13",
     "qs": "^6.10.3",
+    "socket.io": "^4.5.1",
     "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.0",
     "terser": "^5.14.2",
@@ -48,8 +50,11 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "autoprefixer": "^10.4.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "~4.5.5"
   }
 }
