trying to do abstract components, like button where there will be only one button component with props etc..., experimenting with slots, breaking down large sections into smaller components

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_BASE_URL=${BASE_URL}
-VUE_APP_WEBSOCKET=${WEBSOCKET}
+VUE_APP_BASE_URL='https://development-reddit-backend.herokuapp.com'
+VUE_APP_WEBSOCKET='wss://development-reddit-backend.herokuapp.com/ws'
