--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/stompjs": "^2.3.5",
     "@types/text-encoding": "^0.0.36",
     "@vueform/multiselect": "^2.4.2",
+    "@vuelidate/core": "^2.0.0-alpha.44",
+    "@vuelidate/validators": "^2.0.0-alpha.31",
     "axios": "^0.26.1",
     "bootstrap-icons-vue": "^1.8.1",
     "bootstrap-vue-3": "^0.1.11",
@@ -36,6 +38,7 @@
     "vue-router": "^4.0.14",
     "vue-simple-password-meter": "^1.1.0",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-carousel": "^0.1.46",
     "vuemoji-picker": "^0.1.4",
     "webstomp-client": "^1.2.6",
     "yup": "^0.32.11"
